fixed buttons on dark mode

--- a/src/pages/cart/Cart.styles.css
+++ b/src/pages/cart/Cart.styles.css
@@ -44,7 +44,7 @@
     }
 
     .quantity-btn-plus {
-        background-color: #fff;
+
         border: 1px solid rgb(23, 136, 106);
         border-radius: 8px;
         padding: 0.5rem;
@@ -53,7 +53,7 @@
       }
 
       .quantity-btn-minus {
-        background-color: #fff;
+
         border: 1px solid #fffb00;
         border-radius: 8px;
         padding: 0.5rem;
@@ -62,7 +62,7 @@
       }
       
       .remove-btn {
-        background-color: #fff;
+
         border: 1px solid #ff0000;
         border-radius: 8px;
         padding: 0.5rem;
